[package]
name = "see-you-later"
version = "0.1.0"
authors = ["wolf4ood <maggiolo00@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-timer="3.0"
pin-project-lite = "0.1.4"
futures="0.3.4"

[dev-dependencies]
smol="0.1"
