[package]
name = "see-you-later"
version = "0.1.0"
authors = ["wolf4ood <maggiolo00@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
description= "Delay and schedule async task"
repository = "https://github.com/wolf4ood/see-you-later"
keywords = ["async", "delay","timeout","scheduled"]
categories = ["asynchronous"]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-timer="3.0"
pin-project-lite = "0.1.4"
futures="0.3.4"

[dev-dependencies]
smol="0.1"
wait-for-me="0.1"
smol-potat = { version = "0.2" }
